this is 5th commit

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     
         <h1 class="centertext">  Hello World! </h1>
         <hr />
-        <figure>
+        <figure><!--1st element-->
        <img src="asset/northcampustour2.jpeg" width="800px">
+       <!--2nd element-->
             <figcaption>Web Design Portfolio By Aisyah</figcaption>
         </figure>
     
@@ -36,7 +37,7 @@
 
 
 <br>
-    <hr />
+    <hr /> <!--3rd element-->
 
 <br>
     <p1>You can find more about me through my Linkedin Page below</p1>
